rename some PropertyTypes